src/main/arm/mainTemplate.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "installKitUri": {
            "type": "string"
        },
        "ibmUserId": {
            "type": "string"
        },
        "ibmUserPwd": {
            "type": "securestring"
        },
        "adminUser": {
            "type": "string"
        },
        "adminPwd": {
            "type": "securestring"
        },
        "vmAdminId": {
            "type": "string"
        },
        "vmAdminPwd": {
            "type": "securestring"
        },
        "virtualMachineName": {
            "defaultValue": "[concat(resourceGroup().name,'-wasnd-vm')]",
            "type": "string"
        },
        "vmSize": {
            "defaultValue": "Standard_A1",
            "type": "string"
        },
        "osDiskType": {
            "defaultValue": "StandardSSD_LRS",
            "type": "string"
        },
        "dnsLabelPrefix":{
            "defaultValue": "wasnd-vm",
            "type": "string"
        },
        "virtualNetworkName": {
            "defaultValue": "[concat(resourceGroup().name,'-vnet')]",
            "type": "string"
        },
        "addressPrefix": {
            "defaultValue": "10.0.0.0/16",
            "type": "string"
        },
        "subnetName": {
            "defaultValue": "subnet01",
            "type": "string"
        },
        "subnetAddressPrefix": {
            "defaultValue": "10.0.1.0/24",
            "type": "string"
        },
        "virtualNetworkExisted": {
            "defaultValue": false,
            "type": "bool"
        },
        "networkSecurityGroupName": {
            "defaultValue": "[concat(resourceGroup().name,'-',parameters('subnetName'),'-nsg')]",
            "type": "string"
        },
        "location":{
            "type": "string",
            "defaultValue": "[resourceGroup().location]"
        },
        "connectToDB2Server": {
            "defaultValue": "false",
            "type": "string"
        },
        "db2ConnConfig": {
            "defaultValue": {
                "serverName": "[newGuid()]",
                "portNumber": "[newGuid()]",
                "dBName": "[newGuid()]",
                "dBUserName": "[newGuid()]",
                "dBUserPwd": "[newGuid()]"
            },
            "type": "secureObject"
        }
    },
    "variables": {
        "networkInterfaceName": "[concat(parameters('virtualMachineName'), '-if')]",
        "publicIPAddressName": "[concat(parameters('virtualMachineName'), '-ip')]",
        "diskName": "[concat(parameters('virtualMachineName'), '-disk')]",
        "publicIPAddressRef": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddressName'))]",
        "subnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnetName'))]",
        "networkSecurityGroupRef": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]",
        "networkInterfaceRef": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]",
        "virtualNetworkRef": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
        "virtualMachineRef": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachineName'))]",
        "scriptLocation": "${artifactsLocationBase}/${project.artifactId}/${git.tag}/src/main/scripts/",
        "scriptName": "install.sh",
        "commandToExecute1": "[concat('sh ',variables('scriptName'),' -l \"',parameters('installKitUri'),'\" -u ',parameters('ibmUserId'),' -p ',parameters('ibmUserPwd'),' -m ',parameters('adminUser'),' -c ',parameters('adminPwd'),' -a \"',variables('scriptLocation'),'\"')]",
        "commandToExecute2": "[if(bool(parameters('connectToDB2Server')),concat(' -n \"',parameters('db2ConnConfig').serverName,'\" -t ',parameters('db2ConnConfig').portNumber,' -d ',parameters('db2ConnConfig').dBName,' -i ',parameters('db2ConnConfig').dBUserName,' -s ',parameters('db2ConnConfig').dBUserPwd),' -n  -t  -d  -i  -s ')]"
    },
    "resources": [
        { 
            "apiVersion": "2018-02-01",
            "name": "${tracking.pid}", 
            "type": "Microsoft.Resources/deployments",
            "properties": {
                "mode": "Incremental",
                "template": {
                    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
                    "contentVersion": "1.0.0.0",
                    "resources": []
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-06-01",
            "name": "[parameters('networkSecurityGroupName')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "HTTP",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "destinationPortRanges": ["9060","9080"]
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 320,
                            "direction": "Inbound",
                            "destinationPortRanges": ["9043","9443"]
                        }
                    },
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 340,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-06-01",
            "name": "[variables('publicIPAddressName')]",
            "location": "[parameters('location')]",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings":{
                    "domainNameLabel":"[parameters('dnsLabelPrefix')]"
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-06-01",
            "name": "[parameters('virtualNetworkName')]",
            "condition": "[not(parameters('virtualNetworkExisted'))]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[variables('networkSecurityGroupRef')]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('addressPrefix')]"
                    ]
                },
                "enableDdosProtection": false,
                "enableVmProtection": false
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "apiVersion": "2019-03-01",
            "name": "[concat(parameters('virtualMachineName'), '/CustomScript')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[variables('virtualMachineRef')]"
            ],
            "properties": {
                "autoUpgradeMinorVersion": true,
                "publisher": "Microsoft.Azure.Extensions",
                "type": "CustomScript",
                "typeHandlerVersion": "2.0",
                "settings": {
                    "fileUris": [
                        "[uri(variables('scriptLocation'), variables('scriptName'))]"
                    ],
                    "commandToExecute": "[concat(variables('commandToExecute1'), variables('commandToExecute2'))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2019-06-01",
            "name": "[concat(parameters('virtualNetworkName'), '/', parameters('subnetName'))]",
            "dependsOn": [
                "[variables('virtualNetworkRef')]",
                "[variables('networkSecurityGroupRef')]"
            ],
            "properties": {
                "addressPrefix": "[parameters('subnetAddressPrefix')]",
                "networkSecurityGroup": {
                    "id": "[variables('networkSecurityGroupRef')]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-03-01",
            "name": "[parameters('virtualMachineName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[variables('networkInterfaceRef')]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vmSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "RedHat",
                        "offer": "RHEL",
                        "sku": "7.4",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[variables('diskName')]",
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('osDiskType')]"
                        }
                    }
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachineName')]",
                    "adminUsername": "[parameters('vmAdminId')]",
                    "adminPassword": "[parameters('vmAdminPwd')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[variables('networkInterfaceRef')]"
                        }
                    ]
                }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-06-01",
            "name": "[variables('networkInterfaceName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[variables('publicIPAddressRef')]",
                "[variables('subnetRef')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[variables('publicIPAddressRef')]"
                            },
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "primary": true
            }
        }
    ]
}
